Made NTP client compile with Java 1.3 source level and Cinterion CMTK libraries.